# pypipegraph2

./: .coveragerc  .gitignore  .gitignore.orig  .hgignore  .hgtags  2026-06-10-092240-this-repo-is-a-graph-based-python-inspecting-mak.txt  C  Cargo.toml  README.md  README.rst  Session.vim  bacon.sh  designgoals.md  edit_version.sh  flake.nix  fuzzying_error_13183155.txt  fuzzying_error_13183163.txt  fuzzying_error_13185331.txt  fuzzying_error_13185339.txt  iteration_with_fail_error_140_163_8.txt  iteration_with_fail_error_140_227_8.txt  iteration_with_fail_error_200_163_16.txt  iteration_with_fail_error_200_171_16.txt  iteration_with_fail_error_41_163_16.txt  iteration_with_fail_error_41_171_16.txt  iteration_with_fail_error_41_275_16.txt  iteration_with_fail_error_41_283_16.txt  iteration_with_fail_error_41_525_16.txt  iteration_with_fail_error_41_527_16.txt  loop_fuzzying.sh  loop_ppg2_iterations_with_fail.sh  loop_ppg2_iterations_without_fail.sh  loop_pytest.sh  prep_for_tests.sh  pyproject.toml  run_pytest.sh  setup.cfg  setup.cfg.orig  setup.py  shu  (+5 more)
.github/workflows/: CI.yml  pages.yml  pytest.yml  release.yml
.ppg/errors/: latest
.ppg/logs/: latest  runtimes.tsv
benches/: bench1.rs
benchmarks/: bench_disjoint.py  bench_kilo_jobs.py  bench_simple.py  bench_tall.py  bench_wide.py  function_invariant_bonanza.py
content/: index.md
content/faq/: _index.md
content/reference/: _index.md
dev_utils/: coverage.py  edit_version.py  edit_version.sh  interactive_test.py  loop_cargo_test.sh  loop_main.sh  loop_ppg2_iterations_with_fail.sh  loop_ppg2_iterations_without_fail.sh  loop_pytest.sh  prep_for_bench.sh  prep_for_tests.sh  run_pytest.sh
docs/: Makefile  conf.py  hugo.toml  index.rst
docs/content/: _index.md
docs/content/docs/concepts/: _index.md
docs/content/docs/concepts/forbidden/: _index.md
docs/content/docs/concepts/tracking_hashes/: _index.md
docs/content/docs/faq/: _index.md
docs/content/docs/how-to/: _index.md
docs/content/docs/reference/: _index.md
docs/content/docs/reference/jobs/: _index.md
docs/content/docs/reference/logging/: _index.md
docs/content/docs/reference/utils/: _index.md
docs/content/docs/tutorial/: _index.md
docs/public/: 404.html  en.search-data.min.3262ee51a7e206757ce3214dd67f5fcbe5148f4f7e48d59c1a5bc0c27dc62454.json  en.search.min.a6ffa78d03b998306606ea689162a7845a144bc0ed21039a206ec7a1811e6536.js  en.search.min.ccf750b1965b370f3cbe0d19a361a3925b8f788ffc73414147a49f6ca065eadf.js  index.html  index.xml  manifest.json  sitemap.xml
docs/public/categories/: index.html  index.xml
docs/public/docs/: index.html  index.xml
docs/public/docs/concepts/: index.html  index.xml
docs/public/docs/faq/: index.html  index.xml
docs/public/docs/how-to/: index.html  index.xml
docs/public/docs/reference/: index.html  index.xml
docs/public/docs/tutorial/: index.html  index.xml
docs/public/tags/: index.html  index.xml
docs/themes/: hugo-book
docs/themes/hugo-book/assets/: _markdown.scss
examples/: Basic_notebook.ipynb  abort_when_stalled.py  call_externals.py  long_for_interactive.py  massive_exception.py  nested_exception.py  pandas_exception.py  runtimes.py  slow_for_interactive.py  stall.py  stop_then_abort_when_stalled.py  stop_when_stalled.py
examples/simplest/: simplest.py
examples/simplest/.ppg/errors/: latest
examples/simplest/.ppg/logs/: latest
fuzz/: .gitignore  Cargo.toml  README.md  run_parallel.sh
fuzz/known_crashes/: ephemeral_validated_no_job_history  interleave_deadlock_a_validated_eph_chain  interleave_deadlock_b_skipped_eph  interleave_deadlock_c_cleanup_pending  interleave_deadlock_d_skipped_output_multi  interleave_deadlock_e_cleanup_multi  interleave_deadlock_f_skipped_output_multi  new_history_assert_skipped_eph_no_history  upstream_failure_after_skip_unexpected_was_7
fuzz/seeds/: chain_abort  delete_outputs  toggle_no_fail
fuzz/seeds_interleave/: ephemeral_abort_cleanup  parallel_fanout  rename_kindflip  serial_chain
fuzz/src/: interleave.rs  main.rs
out_interleave/default/: cmdline  plot_data
python/localscope/: __init__.py
python/ppg2_rust/: __init__.py
python/pypipegraph2/: __init__.py  cli.py  entry_points.py  enums.py  exceptions.py  graph.py  graph.py.orig  hashers.py  history_comparisons.py  history_comparisons.py.orig  interactive.py  job_status.py  jobs.py  parallel.py  ppg1_compatibility.py  ppg_traceback.py  runner.py  util.py
python/pypipegraph2/localscope/: __init__.py
python/pypipegraph2/testing/: __init__.py  fixtures.py
src/: engine.rs  fuzzying.rs  lib.rs  main.rs  main_iterations_with_fail.rs  main_iterations_without_fail.rs  tests.rs
src/pypipegraph2/: __init__.py  entry_points.py  enums.py  exceptions.py  graph.py  hashers.py  interactive.py  job_status.py  jobs.py  parallel.py  ppg1_compability.py  ppg1_compatibility.py  ppg_traceback.py  runner.py  skeleton.py  util.py
src/pypipegraph2/testing/: __init__.py  fixtures.py
tests/: _import_does_not_hang.py  conftest.py  rust_stdout_stderr  shared.py  test_basic.py  test_basics.py  test_bootstrap.py  test_cache_jobs.py  test_cycles.py  test_external_jobs.py  test_flake8.py  test_function_invariants.py  test_interactive.py  test_invariants_and_dependencies.py  test_job_generating_jobs.py  test_jobs.py  test_localscope.py  test_other.py  test_parallel.py  test_plotjobs.py  test_prune.py  test_rust_conversion.py  test_shared_jobs.py  test_simple.py  test_skeleton.py  test_util.py  test_version.py  testchatter.py  tests_from_the_field.py
tests/ppg1_compability_layer/: test_cache_jobs.py  test_compability_layer.py  test_cycles.py  test_invariants_and_depedencies.py  test_job_gen_jobs.py  test_other.py  test_plotjobs.py  test_prune.py  test_simple.py  test_util.py
tests/ppg1_compatibility_layer/: shared.py  test_cache_jobs.py  test_compatibility_layer.py  test_cycles.py  test_invariants_and_depedencies.py  test_job_gen_jobs.py  test_other.py  test_plotjobs.py  test_prune.py  test_simple.py  test_util.py
tests/test_parent_termination_kills_children/: manual.py  sleeper.sh  stage2.py
(+90 files in other folders)
