[package]
name = "pypipegraph2"
version = "3.4.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pypipegraph2"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ppg2_profiling"
path = "src/main.rs"

[[bin]]
name = "ppg2_iterations_without_fail"
path = "src/main_iterations_without_fail.rs"

[[bin]]
name = "ppg2_iterations_with_fail"
path = "src/main_iterations_with_fail.rs"



[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3", "abi3-py38"] }
petgraph = "0.6.2"
env_logger = "0.9.3"
log = "0.4.14"
# ctrlc = {version="3.2.1", features = ["termination"] }
colored = "2.0.0"
thiserror = "1.0.37"
itertools = "0.10.5"
backtrace = "0.3.67"
num_cpus = "1.15.0"

[package.metadata.maturin]
python-source = "python"

# [dev-dependencies]
# criterion = {version = "0.3", features = ["html_reports"]}

[[bench]]
name = "bench1"
harness = false

[profile.release]
debug = true
