[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "pypipegraph2"
version = "3.0.0"
description = "Advanced python 'what changed and what do we need to do' tracking"
license = "MIT"
long-description = "README.md"
authors = [
 {"name" = "Florian Finkernagel", "email" = "finkernagel@imt.uni-marburg.de"}
]
classifiers = [
	"Development Status :: 4 - Beta",
	"Programming Language :: Python",
    "Programming Language :: Rust",
]
urls = {"homepage"= "https://github.com/TyberiusPrime/pypipegraph2"}

requires-python = ">=3.7"
dependencies = [
	"loguru",
	"rich",
	"xxhash",
	"wrapt",
	"deepdiff",
	"psutil",
	"networkx",
]


[tool.pytest.ini_options]
pythonpath = "python"
