
[metadata]
name = pypipegraph2
description = Advanced python 'what changed and what do we need to do' tracking
version = 3.4.0
author = Florian Finkernagel
author-email = finkernagel@imt.uni-marburg.de
license = mit
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
url = https://github.com/pyscaffold/pyscaffold/
project-urls = 
	Documentation = https://pyscaffold.org/
platforms = any
classifiers = 
	Development Status :: 4 - Beta
	Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir = 
	=src
install_requires = networkx
	loguru
	rich
	xxhash
	wrapt
	deepdiff>=8.0.0
	filelock
	psutil
	pyzstd
	lib_programname
	textual
python_requires = >=3.7

[options.packages.find]
where = src
exclude = 
	tests

[options.extras_require]
testing = 
	pytest
	pytest-cov
	pytest-mock
	dppd_plotnine
	pandas
	cython
	pypipegraph
	flake8

# [options.entry_points]
# console_scripts = 
# 	ppg2_browse_graph_ml = pypipegraph2.entry_points:cli_browse_graph_ml
# 	ppg2_record_as_generated_file = pypipegraph2.entry_points:cli_record_as_generated_file

[test]
extras = True

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
no-vcs = 1
formats = bdist_wheel
package = pypipegraph2

[tool:pytest]
addopts = 
	--cov pypipegraph2 --cov-report term-missing
	--verbose
norecursedirs = 
	dist
	build
	.tox
testpaths = tests
filterwarnings = 
	ignore:::statsmodels.base.wrapper:100

[flake8]
exclude = 
	.tox
	build
	dist
	.eggs
	docs/conf.py
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501
ignore=E713,W503,F841

