[package]
name = "ppg2-fuzz"
version = "0.1.0"
edition = "2018"
publish = false

# standalone, not part of the main crate's (non-)workspace
[workspace]

[[bin]]
name = "fuzz_history"
path = "src/main.rs"

[[bin]]
name = "fuzz_interleave"
path = "src/interleave.rs"

[dependencies]
# must match the cargo-afl version (currently 0.18.1 in the nix store wrapper)
afl = "=0.18.1"
pypipegraph2 = { path = ".." }
rustc-hash = "2.1.2"

[profile.release]
debug = true
